<resources>
    <string name="app_name">Il Carcare</string>

    /* Login */
    <string name="nombre">Nombre</string>
    <string name="app_surname">Apellido</string>
    <string name="email">E-Mail</string>
    <string name="password">Contraseña</string>


    /*Nav Bar*/
    <string name="icon_nav_bar">Il Carcare</string>
    <string name="comprar">comprar</string>
    <string name="buscar">Buscar</string>

    /*Nav Drawer*/
    <string name="pastas">Pastas</string>
    <string name="minutas">Minutas</string>
    <string name="ensaladas">Ensaladas</string>
    <string name="carne_y_parrilla">Carnes y Parrilla</string>
    <string name="del_mar">Del Mar</string>


    /* Subheader del Nav Drawer */
    <string name="subheader">Configuraciones</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="salir">Salir</string>
    <string name="login">Login</string>

    /* Search */
    <string name="busqueda_search">¿Qué desea buscar?</string>
    <string name="consulta_search">Ingrese su consulta</string>
    <string name="inicio_sesion_en_registro">¿Ya está registrado?</string>
    <string name="log_in">Ingresar</string>
    <string name="RepPassword">Repetir contraseña</string>
    <string name="confirmar_compra_carrito">Comprar</string>
    <string name="pastas_drawer">Pastas</string>
    <string name="ensaladas_drawer">Ensaladas</string>
    <string name="parrilla_drawer">Parrilla</string>
    <string name="del_mar_drawer">Del Mar</string>


</resources>
