<?xml version="1.0" encoding="utf-8"?>
<menu

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/md_orange_300"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/item_navigation_drawer_pasta"
            android:icon="@drawable/ic_flecha"
            android:title="@string/pastas" />
        <item
            android:id="@+id/item_navigation_drawer_minutas"
            android:icon="@drawable/ic_flecha"
            android:title="@string/minutas" />
        <item
            android:id="@+id/item_navigation_drawer_ensaladas"
            android:icon="@drawable/ic_flecha"
            android:title="@string/ensaladas" />
        <item
            android:id="@+id/item_navigation_drawer_carneParrilla"
            android:icon="@drawable/ic_flecha"
            android:title="@string/carne_y_parrilla" />
        <item
            android:id="@+id/item_navigation_drawer_mariscos"
            android:icon="@drawable/ic_flecha"
            android:title="@string/del_mar" />
    </group>

    <item android:title="@string/subheader">
        <menu>
            <item
                android:id="@+id/item_navigation_drawer_registrarse"
                android:icon="@drawable/ic_action_content_mail"
                android:title="@string/registrarse" />
            <item
                android:id="@+id/item_navigation_drawer_sesion"
                android:icon="@drawable/ic_login"
                android:title="@string/iniciar_sesion" />
            <item
                android:id="@+id/item_navigation_drawer_salir"
                android:icon="@drawable/ic_action_content_report"
                android:title="@string/salir" />
        </menu>
    </item>
</menu>