<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_search"
    tools:context="com.example.nacho.trabajo_obligatorio_11_12_2017.View.Search">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/busqueda_search"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:padding="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@color/md_blue_100"/>

    <EditText
        android:id="@+id/editBuscar"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:hint="@string/consulta_search"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:background="@color/md_blue_50"
        android:textAlignment="center"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/btnBuscarSearch"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:text="@string/buscar"
        />

</LinearLayout>
