<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_registro"
    tools:context="com.example.nacho.trabajo_obligatorio_11_12_2017.View.MainActivity">

        
        <LinearLayout
            android:id="@+id/ltsContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="vertical">
                <ImageView
                    android:id="@+id/imgIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="160dp"
                    android:src="@drawable/restaurant"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:id="@+id/logTitle"
                    android:layout_width="194dp"
                    android:layout_height="wrap_content"
                    android:text="LOGIN"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:textAlignment="center"
                    android:textColor="@color/md_black_1000"
                    android:layout_marginTop="18dp"
                    android:layout_gravity="center"
                    android:padding="15dp"
                    android:background="@color/md_blue_300"
                    />


                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/email"
                    android:layout_gravity="center"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edtPass"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:hint="@string/password"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnIngresar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/log_in" />



         </LinearLayout>
</LinearLayout>
